Fix condensed navbar drawer spacing

--- a/utils/css/style.css
+++ b/utils/css/style.css
@@ -221,8 +221,10 @@ button {
 
 .hm-navbar.is-condensed .hm-navbar__drawer .nav-links {
     width: 100%;
+    flex: 0 0 auto;
     flex-direction: column;
     align-items: flex-start;
+    align-self: stretch;
     gap: 0.35rem;
     margin-left: 0;
     order: 0;
@@ -240,8 +242,8 @@ button {
     flex-direction: column;
     align-items: stretch;
     gap: 0.35rem;
-    margin-left: 0;
-    padding-top: 0.25rem;
+    margin: 0;
+    padding-top: 0;
 }
 
 .hm-navbar.is-condensed .hm-navbar__drawer .language-switcher {
